# Rockchip_camera_encoder_Networkput

./: .gitignore  CMakeLists.txt  README.md  main.cpp
buildroot/: aarch64.toolchain.cmake  add_buildroot_project.md
buildroot/bedrock_encoder/: Config.in  bedrock_encoder.mk
control/: bedrock_control.c
encoder/: CMakeLists.txt  Readme.md  bedrock_mpi_enc.c  bedrock_mpi_enc.cpp
encoder/inc/: argparse.h  bedrock_enc.h  camera_source.h  filecfg.h  mpi_enc_utils.h  mpp_common.h
encoder/src/: CMakeLists.txt  camera_source.c  filecfg.cpp  mpi_test_utils.cpp
inc/: bedrock_control.h  bedrock_log.h  bedrock_test.h  bedrock_type.h
lib/libconfig/lib/: libconfig++.la  libconfig++.so.9.2.0  libconfig.la  libconfig.so.9.2.0
lib/libconfig/lib/pkgconfig/: libconfig++.pc  libconfig.pc
lib/rockit/include/: rk_comm_rc.h  rk_comm_rgn.h  rk_comm_vdec.h  rk_comm_venc.h  rk_comm_vgs.h  rk_comm_vi.h  rk_comm_video.h  rk_comm_vo.h  rk_common.h  rk_defines.h  rk_mpi_mb.h  rk_mpi_rgn.h  rk_mpi_vdec.h  rk_mpi_venc.h  rk_mpi_vi.h  rk_mpi_vo.h
rtsp/: CMakeLists.txt  bedrock_rtsp.cpp
rtsp/inc/: bedrock_rtsp.h
test/: CMakeLists.txt  bedrock_cfgf_test.cpp  bedrock_mpi.cfg  bedrock_mpi_vi_test.cpp  bedrock_test copy.cpp  bedrock_test.cpp  debug_log_test.c
